--- a/index.html
+++ b/index.html
@@ -209,8 +209,6 @@
 
 
 
-
-
     <!-- footer part -->
 
     <footer class="footer">
@@ -235,13 +233,13 @@
                 </li>
                 <li class="footer-item">
                     <p class="footer-item-title">Biz internetda</p>
-                    <a href="#" class="footer-link">
+                    <a href="https://telegram.org" class="footer-link" target="blank">
                         <i class="fab fa-telegram"></i><p class="icon-text">Telegram</p>
                     </a>
-                    <a href="#" class="footer-link">
+                    <a href="https://facebook.com" class="footer-link" target="blank">
                         <i class="fab fa-facebook"></i><p class="icon-text">Facebook</p>
                     </a>
-                    <a href="#" class="footer-link">
+                    <a href="https://instagram.com" class="footer-link" target="blank">
                         <i class="fab fa-instagram"></i><p class="icon-text">Instagram</p>
                     </a>
                 </li>
