--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <header class="header">
         <nav class="navbar">
             <div class="container">
-                <h1 class="nav-title">Pixer</h1>
+                <a href="#">
+                    <img src="./assets/images/logo.svg" alt="">
+                </a>
                 <ul class="nav-list">
                     <li class="nav-item">
                         <a href="#" class="nav-link">Bosh sahifa</a>
